--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="src/index.css"/>
   </head>
   <body>
-    <h1>Weather app</h1>
-    <footer>Coded by Jesse</footer>
+    <div class="weather-app">
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city..." required/>
+            <input type="submit" value="search"/>
+        </form>
+    </header>
+    <main>
+        <div>
+    <h1>Paris</h1>
+    <p>
+        Tuesday 14:49, scattered clouds <br/>
+        HUmidity: 66%, Wind: 3.31km/h 
+        </p></div>
+        <div>🌥️12&deg;C </div>
+    </p>
+</main>
+    <footer>
+      Coded by <a href="https://github.com/jess-eclaire" target="_blank"> Jesse </a>, 
+      code hosted on <a href="https://github.com/jess-eclaire/weather-project" target="_blank"> Github </a>
+       and website hosted on <a href="https://jt-weather-project.netlify.app/" target="_blank"> Netlify <a>
+    </footer></div>
   </body>
 </html>
