--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
   <body>
     <div class="weather-app">
     <header>
-        <form>
-            <input type="search" placeholder="Enter a city..." required/>
-            <input type="submit" value="search"/>
+        <form class="search-form">
+            <input type="search" placeholder="Enter a city..." required class="search-form-input"/>
+            <input type="submit" value="search" class="search-form-button"/>
         </form>
     </header>
-    <main>
+    <main> <div class="weather-app-data">
         <div>
-    <h1>Paris</h1>
-    <p>
+    <h1 class="weather-app-city">Paris</h1>
+    <p class="weather-app-details">
         Tuesday 14:49, scattered clouds <br/>
-        HUmidity: 66%, Wind: 3.31km/h 
+        HUmidity:<strong> 66%,</strong> Wind: <strong>3.31km/h</strong> 
         </p></div>
-        <div>🌥️12&deg;C </div>
+        <div class="weather-app-temp-container" >
+            <div class="weather-app-icon">🌥️</div>
+            <div class="weather-app-temp">12</div>
+            <div class="weather-app-unit">&deg;C</div> 
+        </div>
+    </div>
     </p>
 </main>
     <footer>
