--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="src/index.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="weather-app">
     <header>
-        <form class="search-form">
-            <input type="search" placeholder="Enter a city..." required class="search-form-input"/>
+        <form class="search-form" id="search-form">
+            <input type="search" placeholder="Enter a city..." required class="search-form-input" id="search-form-input"/>
             <input type="submit" value="search" class="search-form-button"/>
         </form>
     </header>
     <main> <div class="weather-app-data">
         <div>
-    <h1 class="weather-app-city">Paris</h1>
+    <h1 class="weather-app-city" id="city">Paris</h1>
     <p class="weather-app-details">
         Tuesday 14:49, scattered clouds <br/>
         HUmidity:<strong> 66%,</strong> Wind: <strong>3.31km/h</strong> 
         </p></div>
         <div class="weather-app-temp-container" >
             <div class="weather-app-icon">🌥️</div>
-            <div class="weather-app-temp">12</div>
+            <div class="weather-app-temp" id="temperature">12</div>
             <div class="weather-app-unit">&deg;C</div> 
         </div>
     </div>
@@ -34,5 +35,6 @@
       code hosted on <a href="https://github.com/jess-eclaire/weather-project" target="_blank"> Github </a>
        and website hosted on <a href="https://jt-weather-project.netlify.app/" target="_blank"> Netlify <a>
     </footer></div>
+    <script src="src/index.js"></script>
   </body>
 </html>
