--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Humidity:<strong id="humidity"> </strong> Wind: <strong id="wind-speed"></strong> 
         </p></div>
         <div class="weather-app-temp-container" >
-            <div class="weather-app-icon">🌥️</div>
+            <div id="icon"></div>
             <div class="weather-app-temp" id="temperature">12</div>
             <div class="weather-app-unit">&deg;C</div> 
         </div>
